--- a/index.html
+++ b/index.html
@@ -4,7 +4,49 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Madalina-Eleonora Portofolio</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Madalina-Eleonora Gheorghe | Personal Website ✨</title>
+    <meta
+      name="title"
+      content="Madalina-Eleonora Gheorghe | Personal Website ✨"
+    />
+    <meta
+      name="description"
+      content="Let's be internet friends! Experienced Frontend Developer with proved knowledge in the industry."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.madalinaeleonora.dev/" />
+    <meta
+      property="og:title"
+      content="Madalina-Eleonora Gheorghe | Personal Website ✨"
+    />
+    <meta
+      property="og:description"
+      content="Let's be internet friends! Experienced Frontend Developer with proved knowledge in the industry."
+    />
+    <meta
+      property="og:image"
+      content="/src/assets/images/meta-screenshot.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.madalinaeleonora.dev/" />
+    <meta
+      property="twitter:title"
+      content="Madalina-Eleonora Gheorghe | Personal Website ✨"
+    />
+    <meta
+      property="twitter:description"
+      content="Let's be internet friends! Experienced Frontend Developer with proved knowledge in the industry."
+    />
+    <meta
+      property="twitter:image"
+      content="/src/assets/images/meta-screenshot.png"
+    />
   </head>
   <body>
     <div id="root"></div>
